@@ -1,0 +1,2 @@
+require 'mkmf'
+create_makefile '<%= name %>/<%= extension_name %>'
