@@ -10,7 +10,7 @@ module Shoe
         opts.extend(Extensions::OptionParser)
 
         opts.banner   = "Usage: #{File.basename($0)} [options] [path]"
-        opts.defaults = %w(--no-application --no-data .)
+        opts.defaults = %w(--no-application --no-data --no-extension .)
         opts.version  = Shoe::VERSION
 
         opts.on('-a', '--[no-]application', 'Generate a command-line application.') do |application|
@@ -19,6 +19,10 @@ module Shoe
 
         opts.on('-d', '--[no-]data', 'Generate a data directory.') do |data|
           @options[:data] = data
+        end
+
+        opts.on('-e', '--[no-]extension', 'Generate a C extension.') do |extension|
+          @options[:extension] = extension
         end
       end
     end
@@ -52,6 +56,11 @@ module Shoe
         if data?
           install('gitkeep.erb', "data/#{name}/.gitkeep")
         end
+
+        if extension?
+          install('extconf.erb',   "ext/#{name}/extconf.rb")
+          install('extension.erb', "ext/#{name}/#{extension_name}.c")
+        end
       end
 
       def install(template, path, mode=0644)
@@ -68,6 +77,10 @@ module Shoe
         @options[:data]
       end
 
+      def extension?
+        @options[:extension]
+      end
+
       def name
         @path.expand_path.basename.to_s
       end
@@ -78,6 +91,14 @@ module Shoe
 
       def version
         '0.0.0'
+      end
+
+      def extension_name
+        'extension'
+      end
+
+      def extension_module_name
+        extension_name.capitalize.gsub(/_(\w)/) { $1.upcase }
       end
 
       def installable_path(name)
