@@ -6,6 +6,7 @@
 * Move generated VERSION constant out of foo/version.rb, into foo.rb
 * The shoe generator accepts an --application option to generate an executable stub.
 * The shoe generator accepts a --data option to generate a data directory.
+* The shoe generator accepts an --extension option to generate a C extension.
 * Shoe::Tasks may no longer be built with a Gem::Specification object; pass the path to a gemspec file instead.
 
 == 0.5.1 -- 2010 April 7
